src/components/services/features.css
body{
  background-color: var(--primary-color);
}

.features-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    margin-left: 90px;
    margin-top: 30px;
    border-radius: 10px;
  }
  
.question-topic{
    margin-bottom: 10px;
    margin-left: 35rem;
    padding: 5px;
    font-size: 50px;
    color: black;
}

  .feature-item {
    background-color: black;
    border-radius: 10px;
    height: 500px;
    width: 380px;
    transition: var(--transition);
    
  }
  
  .feat-icon,
  .feat-desc,
  .feat-topic {
    color: var(--primary-color);
  }
  
  .feat-icon {
    background: white;
    font-size: 40px;
    text-align: center;
    height: 100px;
    border-radius: 0 0 100px 100px;
    box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
  }
  
  .feat-topic {
    font-size: 20px;
    margin-left: 1rem;
  }
  
  .feat-desc {
    margin-top: 50px;
    font-size: 18px;
    text-align: center;
  } 


  @media (max-width: 768px) {
    .question-topic{
      margin-top: -200px;
      margin-left: 0px;
      font-size: 50px;
    }

    .mobile-section-container{
      margin-top: -150px;
    }

    .feat-topic{
      margin-left: 0;
    }

    .question-topic{
      margin-left: 10px;
    }
  }

